# pdftk-wrapper

./: .circleci  .gitignore  README.md  TODO.md  pyproject.toml  upload.sh
.circleci/: config.yml
.github.bk/workflows/: run_tests.yml
.github/workflows/: publish-to-pypi.yml  run_tests.yml
pdftk-remove-pages/: main.py
pdftk_remove_pages/: main.py
pdftk_wrapper/: common.py  pdftk_remove_pages.py
tests/: test_main.py
tests/pdftk_remove_pages/: test_main.py
tests/pdftk_wrapper/: test_common.py  test_pdftk_remove_pages.py
